fix: Remove scrollbar background

--- a/frappe/public/scss/desk/scrollbar.scss
+++ b/frappe/public/scss/desk/scrollbar.scss
@@ -14,10 +14,10 @@ html {
 	border-radius: 6px;
 }
 
-*::-webkit-scrollbar-track,
-*::-webkit-scrollbar-corner {
-	background: var(--scrollbar-track-color);
-}
+// *::-webkit-scrollbar-track,
+// *::-webkit-scrollbar-corner {
+// 	background: var(--scrollbar-track-color);
+// }
 
 *::-webkit-scrollbar {
 	width: 6px;
